Improved handling of lists using new Java features