@@ -10,8 +10,8 @@ import javafx.application.Application;
 import javafx.application.Platform;
 import javafx.stage.Stage;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.function.Consumer;
 import javax.inject.Inject;
 
@@ -26,7 +26,7 @@ public class VocabHunterGuiExecutable extends Application {
     private VocabHunterGui vocabHunterGui;
 
     public static void setModules(final Module... m) {
-        modules = Arrays.asList(m);
+        modules = List.of(m);
     }
 
     @Override
